# jstrings

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  jstrings.cpp  jstrings.h  jstrings.mk  jstrings.project  main.cpp
.cache/clangd/index/: app.hpp.6DDEDC001E61ADFE.idx  enc_cp932.cpp.A8408BE7DB5B72A1.idx  enc_cp932.hpp.3E572DC5ED3ED980.idx  enc_eucjp.cpp.BE01C63E93AE2ECB.idx  enc_eucjp.hpp.22AB330AAFD09E44.idx  enc_shiftjis.cpp.97BB588C8FCE2534.idx  enc_shiftjis.hpp.6C79604F47AEB4AF.idx  encoding.hpp.DE178AECB41BB0E3.idx  fstreams.hpp.AE819051BF3B1928.idx  jstrings.cpp.FBFF2C164B93BB64.idx  jstrings.hpp.4DF5880E965F6154.idx  main.cpp.FDFB40A6425EB388.idx  main_old.cpp.51DEFED4DF560AB7.idx  types.hpp.CDEFF192635F0D9E.idx  usage.cpp.F4AD0297DF071D2F.idx  usage.hpp.CC50E5353C0C2017.idx
docs/html/: annotated.html  classes.html  classjis__enc-members.html  classjis__enc.html  classshift__jis-members.html  classshift__jis.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  jis__enc_8h_source.html  main_8h_source.html  shift__jis_8h_source.html  structfound__string-members.html  structfound__string.html
docs/html/search/: all_1.js  all_2.js  all_4.js  all_5.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js  variables_4.js
inc/: cp932.h  enc_cp932.h  enc_cp932.hpp  enc_eucjp.h  enc_eucjp.hpp  enc_shiftjis.h  enc_shiftjis.hpp  enc_validator.hpp  encoding.h  encoding.hpp  euc.h  eucjp.h  filesys.hpp  fstreams.hpp  iconv_encoding.hpp  jis_encoding.h  jis_validator.hpp  jstrings.hpp  main.h  shift_jis.h  types.h  types.hpp  uniconv.hpp  usage.hpp
include/: jis_enc.h  jis_encoding.h  main.h  shift_jis.h  sjis.h
src/: app.hpp  app.hpp.cfg  cp932.cpp  enc_cp932.cpp  enc_eucjp.cpp  enc_shiftjis.cpp  euc.cpp  eucjp.cpp  jis_enc.cpp  jstrings.cpp  main.cpp  main_old.bak  project.hpp  project.hpp.cfg  shift_jis.cpp  sjis.cpp  usage.cpp
